# maplestory-union-solver

./: .gitattributes  .gitignore  LICENSE-POLICY.md  README.ko.md  README.md
docs/: architecture.md
docs/algorithms/: exact-cover.md  group-count.md
docs/ml/: features.md
docs/schemas/: README.md
server/: .env.example  .gitignore  .golangci.yml  LICENSE  README.md  go.mod  go.sum
server/cmd/server/: main.go
server/internal/characters/: handler.go  repository.go  service.go  service_test.go
server/internal/config/: config.go
server/internal/db/: db.go  migrations.go
server/internal/db/migrations/: 0001_init.sql
server/internal/httpsrv/: server.go
server/internal/nexon/: client.go  client_test.go  types.go
server/internal/nexon/testdata/: example_union.json
ui/: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: shapePalette.ts
ui/src/components/board/: Board.tsx  BoardCell.tsx  BoardControls.tsx  GroupCountOverlay.tsx  ResultOverlay.tsx  SolverNotice.tsx
ui/src/components/characters/: CharacterPanel.tsx  NicknameSearch.tsx  PresetTabs.tsx  ShapeGrid.tsx  ShapeThumbnail.tsx
ui/src/components/solver/: ElapsedTimer.tsx
ui/src/components/ui/: Checkbox.tsx  CloseButton.tsx  NumberField.tsx
ui/src/domain/: boardLayout.test.ts  boardLayout.ts  pieces.test.ts  pieces.ts  validation.ts
ui/src/hooks/: useFavicon.ts  useNotification.ts  usePermission.ts  useSolverOutcome.ts
ui/src/services/: characters.ts  client.ts  runtime.ts  selection.ts  solver.ts
ui/src/solver/: SolverPortfolio.ts  SolverWorker.ts  inputBuilder.ts  messages.ts  solver.worker.ts
ui/src/state/: boardState.test.ts  boardStore.ts  characterStore.ts  recentSearchesStore.ts  solverStore.ts
ui/src/types/: board.ts  favicon.ts  pieces.ts  solver.ts  status.ts  wasm.ts
ui/src/utils/: boardOutline.test.ts  boardOutline.ts  coords.test.ts  coords.ts  faviconSvg.ts  levelToCells.test.ts  levelToCells.ts
wasm/: .gitignore  Cargo.toml  README.md
wasm/src/: error.rs  lib.rs
wasm/src/base/: bitset.rs  connectivity.rs  mod.rs  rng.rs
wasm/src/domain/: enumerate.rs  mod.rs  piece.rs  placement.rs
wasm/src/io/: common.rs  input.rs  mod.rs  output.rs
wasm/src/ml/: canonical.rs  mod.rs  tracer.rs
wasm/src/solver/: cancel.rs  exact_cover.rs  mod.rs  pruning.rs  state.rs
wasm/tests/: exact_cover_basic.rs
wasm/wasm-test/: index.html
