[package]
name = "maplestory-union-solver"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "LGPL-3.0-or-later"
description = "MapleStory Union Placement Solver"
repository = "https://github.com/CloudHolic/maplestory-union-solver"
authors = ["CloudHolic"]
publish = false

[lib]
# "rlib" for native use (tests, benchmark binary)
# "cdylib" for WASM build
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
rand_xoshiro = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
thiserror = "2.0.18"
wasm-bindgen = "0.2.118"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false

[profile.dev]
opt-level = 1
