[package]
name = "maplestory-union-solver-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "LGPL-3.0-or-later"
description = "MapleStory Union Placement Solver"
repository = "https://github.com/CloudHolic/maplestory-union-solver"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
rand_xoshiro = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6.5"
tsify-next = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.118"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false

[profile.dev]
opt-level = 1

